============ Version 2.26.2

2009-05-03  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 2.26.2

2009-05-01  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totemPlugin.cpp:
	* browser-plugin/totemPlugin.h: Add support for autohref,
	makes trailers on the Apple website work again
	(Closes: #580973)

2009-04-24  Bastien Nocera  <hadess@hadess.net>

	* src/totem-uri.c (totem_add_subtitle):
	Add the cache subtitles directory to the subtitle file
	selection dialogue's shortcuts (Closes: #579860)

2009-04-23  Bastien Nocera  <hadess@hadess.net>

	* src/plugins/opensubtitles/opensubtitles.py:
	Fix failure to save downloaded subtitles, see
	https://bugzilla.redhat.com/show_bug.cgi?id=497210

2009-04-22  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totem-plugin-viewer.c (resolve_uri):
	Fix resolve_uri returning an empty URI when trying to resolve
	with a base at the root of a webserver (Closes: #579716)

2009-04-21  Bastien Nocera  <hadess@hadess.net>

	* data/totem-video-thumbnailer.1:
	* data/totem-video-thumbnailer.pod:
	* data/totem.1: Update from master

2009-04-08  Christian Persch  <chpe@gnome.org>

	* src/eggsmclient-xsmp.c: (save_state): Re-sync from libegg master.

============ Version 2.26.1

2009-04-01  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 2.26.1

2009-04-01  Bastien Nocera  <hadess@hadess.net>

	* src/totem-playlist.c (totem_playlist_file_changed):
	Only remove files when the location is about to be umounted,
	or is umounted (Closes: #574097)

2009-04-01  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totemNarrowSpacePlugin.cpp: Fix Rewind()
	and Stop() functions to do what they're supposed to in
	the QuickTime compat plugin (Closes: #544066)

2009-04-01  Bastien Nocera  <hadess@hadess.net>

	* src/totem-playlist.c (ensure_shuffled): Patch from
	Pascal Sachs <psachs@student.ethz.ch> to make sure all the items
	are played when a playlist is shuffled but not in repeat mode